--- a/lyricanalysis.html
+++ b/lyricanalysis.html
@@ -8,6 +8,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fondamento&display=swap" rel="stylesheet">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script src="js/jquerybxslider.js"></script>
+  <script src="js/javascript.js"></script>
+
+	<link rel="stylesheet" href="css/jquerybxslider.css"/>
 </head>
 <body id="lyricscontent-wrapper">
   <header>
@@ -66,5 +71,12 @@
     </blockquote>
     <p>These lyrics are all unique ways of explaining how difficult you know it will be to forget about your ex, particularly if it was a young romance. We think we know everything when we are young, but really we are still naive, discovering ourselves, and learning how to live.
   </section>
+  <div class="slideshow">
+		<ul class="bxslider">
+			<li><img src="media/TS1.png" /></li>
+			<li><img src="media/TS2.jpg" /></li>
+			<li><img src="media/TS3.jpg" /></li>
+		</ul>
+	</div>
 </body>
 </html>
