map.html created with nav

--- a/lyricanalysis.html
+++ b/lyricanalysis.html
@@ -21,6 +21,7 @@
           <li><a href="index.html">Resume</a></li>
           <li id="onpage"><a href="lyricanalysis.html">Lyrics</a></li>
           <li><a href="stardewvalleyfarm.html">Farm</a></li>
+          <li><a href="map.html">Map</a></li>
         </ul>
       </div>
     </nav>
