--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Resume</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/javascript.js"></script>
 </head>
 <body>
   <header>
@@ -14,6 +15,7 @@
           <li id="onpage"><a href="index.html">Resume</a></li>
           <li><a href="lyricanalysis.html">Lyrics</a></li>
           <li><a href="stardewvalleyfarm.html">Farm</a></li>
+          <li><a href="map.html">Map</a></li>
         </ul>
       </div>
     </nav>
