--- a/stardewvalleyfarm.html
+++ b/stardewvalleyfarm.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="shpinscher-webfontkit/stylesheet.css" type="text/css">
+  <script src="js/javascript.js"></script>
 </head>
 <body id="farmcontent-wrapper">
   <header>
@@ -15,6 +16,7 @@
           <li><a href="index.html">Resume</a></li>
           <li><a href="lyricanalysis.html">Lyrics</a></li>
           <li id="onpage"><a href="stardewvalleyfarm.html">Farm</a></li>
+          <li><a href="map.html">Map</a></li>
         </ul>
       </div>
     </nav>
