basic map added

--- a/map.html
+++ b/map.html
@@ -6,8 +6,11 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/javascript.js"></script>
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsgBRUh55Ayz7VSnjBxhwbRzKvdcyeD-Y&callback=initMap">
+</script>
 </head>
-<body>
+<body id="wrapper">
   <header>
     <nav id="main-navbar">
       <div id="navbar-container">
@@ -20,5 +23,6 @@
       </div>
     </nav>
   </header>
+  <div id="map"></div>
 </body>
 </html>
