--- a/lyricanalysis.html
+++ b/lyricanalysis.html
@@ -5,6 +5,9 @@
   <title>Lyric Analysis</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script src="js/jquerybxslider.js"></script>
   <script src="js/javascript.js"></script>
 	<link rel="stylesheet" href="css/jquerybxslider.css"/>
