--- a/lyricanalysis.html
+++ b/lyricanalysis.html
@@ -11,7 +11,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script src="js/jquerybxslider.js"></script>
   <script src="js/javascript.js"></script>
-	<link rel="stylesheet" href="css/jquerybxslider.css"/>
+	<link rel="stylesheet" href="css/jquerybxslider.css">
 </head>
 <body id="lyricscontent-wrapper">
   <header>
@@ -45,9 +45,9 @@
     <p>You can make your partner literally the center of your world, but that doesn't mean they'll do the same for you. Now that the relationship is over, it's clear that their memory will have a large impact on you, but your ex will likely choose to barely remember your time together. Everyone knows that breakups suck; they suck even more when the other person shows that they don't care about you anymore.</p>
     <div class="slideshow">
       <ul class="bxslider">
-        <li><img src="media/TS1.png" /></li>
-        <li><img src="media/TS2.jpg" /></li>
-        <li><img src="media/TS3.jpg" /></li>
+        <li><img src="media/TS1.png" alt="Photo of Taylor Swift with her back to the camera and her hair in a braid in a forest"></li>
+        <li><img src="media/TS2.jpg" alt="Photo of Taylor Swift looking away and her hair in a bun"></li>
+        <li><img src="media/TS3.jpg" alt="Photo of Taylor Swift performing on a stage and holding a guitar"></li>
       </ul>
     </div>
   </section>
